make website dynamic

--- a/css/style.css
+++ b/css/style.css
@@ -700,7 +700,7 @@ nav.fixed-top .nav-item .nav-link:before {
 }
 
 .banner .banner-caption h1 {
-    /* font-size: 88px; */
+    font-size: 54px;
     font-weight: 900;
     color: #fff;
 }
